tests/errors/syn.overflow.u8-value.or
main :: () -> void {
    x := 1000u8;
    x;
};